test/unique/neg/notlocal2.check
notlocal2.scala:14: error: x.f is not guarded [guardsConform1]
    f = x.f
          ^
one error found
